(feat) minimum viable implementation